# SightTalk-AI

./: .gitignore  AGENTS.md  DESIGN.md  README.md  compose.yaml  livekit.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  sdd.md
backend/src/sighttalk_api/: __init__.py  main.py
backend/src/sighttalk_api/agent/: __init__.py  bus.py  context.py  dialogue.py  execution.py  frames.py  lifecycle.py  livekit_runtime.py  media_policy.py  metrics.py  noise.py  prompts.py  runtime_workers.py  short_term_context.py  tooling.py  vad.py  worker.py
backend/src/sighttalk_api/ai/: __init__.py  adapters.py  bailian_adapters.py  mock_adapters.py  orchestrator.py  provider_adapters.py
backend/src/sighttalk_api/api/: deps.py  router.py
backend/src/sighttalk_api/core/: __init__.py  config.py  cost.py  errors.py  events.py  logging.py  session.py
backend/src/sighttalk_api/media/: __init__.py  audio_buffer.py  frame_buffer.py  keyframe_selector.py
backend/src/sighttalk_api/providers/: bailian.py  base.py  factory.py  gemini_live.py  mock.py  openai_realtime.py
backend/src/sighttalk_api/schemas/: assistant.py  auth.py  (+2 more)
backend/tests/: conftest.py  test_agent_bus.py  test_agent_worker.py  test_audio_store.py  test_auth.py  test_bailian_adapters.py  test_bailian_config.py  test_bailian_realtime_provider.py  test_buffers.py  test_conversations.py  test_cost.py  test_events.py  test_gemini_live_provider.py  test_health.py  test_livekit_execution_cleanup.py  test_livekit_messenger.py  test_livekit_runtime.py  test_livekit_session.py  test_local_vad.py  test_long_term_memory.py  test_manual_response_flow.py  test_media_policy.py  test_memory.py  test_noise_suppression.py  test_openai_realtime_provider.py  test_orchestrator.py  test_provider_config.py  test_provider_factory.py  test_runtime_workers.py  test_session.py  test_short_term_context.py  test_websocket_flow.py  test_worker_runner_assembly.py
(+98 files in other folders)
