[project]
name = "sighttalk-api"
version = "0.1.0"
description = "Backend API and realtime agent for SightTalk AI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "livekit-api>=1.1.0",
    "pydantic-settings>=2.10.0",
    "pyjwt>=2.10.0",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.17.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["sighttalk_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
